# adobe-hack

./: .gitignore  README.md  README.md.bak  main.py  problem.md  pyproject.toml  requirements.txt.bak  solution1a.md
Challenge - 1(a)/: FINE_TUNED_MODEL_SUMMARY.md  HYBRID_MODEL_SUMMARY.md  SLM_SETUP_GUIDE.md  process_pdfs.py  process_pdfs_generic.py  process_pdfs_ml.py  requirements.txt
Challenge_1a/: README.md  __init__.py  main.py  pyproject.toml  requirements.txt
Challenge_1a/data/output/: file01.json  file02.json  file03.json  file04.json  file05.json
Challenge_1a/docker/: Dockerfile  docker-build-test.sh
Challenge_1a/docs/: DOCKER_USAGE.md  README.md
Challenge_1a/scripts/: __init__.py  check_dependencies.py  demo_json_builder.py  final_performance_test.py  simple_performance_test.py
Challenge_1a/src/pdf_extractor/: __init__.py
Challenge_1a/src/pdf_extractor/config/: config.py
Challenge_1a/src/pdf_extractor/core/: __init__.py  classifier.py  error_handler.py  json_builder.py  structure_analyzer.py
Challenge_1a/src/pdf_extractor/models/: __init__.py  models.py
Challenge_1a/tests/: __init__.py  test_classifier.py  test_encoding.py  test_error_handling.py  test_feature_extractor.py  test_integration_error_handling.py  test_integration_pipeline.py  test_integration_preprocessing.py  test_json_builder.py  test_json_integration.py  test_multilingual_simple.py  test_multilingual_support.py  test_pdf_manual.py  test_pdf_parser.py  test_performance.py  test_pipeline_simple.py  test_preprocessor.py  test_structure_analyzer.py
Challenge_1b/: Dockerfile  README.md  approach_explanation.md  check_model_size.py  main.py  pyproject.toml  requirements.txt  solution_1b.md  test_collection_processor.py  test_full_processing.py  test_integration.py  test_integration_final.py  test_semantic_ranker.py  test_sentence_analysis_detailed.py
Challenge_1b/.kiro/specs/pdf-analysis-system/: design.md  requirements.md  tasks.md
Challenge_1b/Collection 1/: challenge1b_output.json
Challenge_1b/Collection 2/: challenge1b_output.json
Challenge_1b/Collection 3/: challenge1b_output.json
Challenge_1b/src/pdf_analysis/: __init__.py  collection_processor.py  output_generator.py  pdf_analyzer.py  semantic_ranker.py
Solution(1a)/: run.py
Solution-1a/: README.md  main.py  pyproject.toml
output/: E0CCG5S312.json  TOPJUMP-PARTY-INVITATION-20161003-V01.json
problem1a/: .dockerignore  Dockerfile  MULTILINGUAL_IMPROVEMENTS.md  README.md  __init__.py  classifier.py  classifier.py.backup  config.py  main.py  (+17 more)
(+56 files in other folders)
